infra/k8s/base/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app.kubernetes.io/name: kafka
spec:
  selector:
    app.kubernetes.io/name: kafka
  ports:
    - name: client
      port: 9092
      targetPort: client
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  labels:
    app.kubernetes.io/name: kafka
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: kafka
  ports:
    - name: client
      port: 9092
      targetPort: client
    - name: controller
      port: 9093
      targetPort: controller
